--- a/MultiHost/App.config
+++ b/MultiHost/App.config
@@ -4,8 +4,9 @@
     Copyright (C) 2014 Del Mayhak
 
     This software may be modified and distributed under the terms
-    of the MIT license.  See the LICENSE.TXT file for details.
+    of the MIT license.  See the LICENSE file for details.
 -->
+
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
