--- a/MultiHost/packages.config
+++ b/MultiHost/packages.config
@@ -4,8 +4,9 @@
     Copyright (C) 2014 Del Mayhak
 
     This software may be modified and distributed under the terms
-    of the MIT license.  See the LICENSE.TXT file for details.
+    of the MIT license.  See the LICENSE file for details.
 -->
+
 <packages>
   <package id="EntityFramework" version="6.1.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net451" />
